# doplgrep

./: .gitignore  .gitignore\  ARCHITECTURE.md  README.md  demo_download_script.py  pyproject.toml  requirements.txt  setup.py
doplgrep/: __main__.py  generate_embeddings.py  image_embedder.py  query_doppelganger.py  utils.py  vector_index.py
input_images/: dorian.HEIC
