[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "doplgrep"
version = "0.1.0"
description = "Face doppelganger search using DINOv3 embeddings"
authors = [{ name = "Joseph Roche" }]
requires-python = ">=3.8"

dependencies = [
  "torch>=2.0.0",
  "torchvision>=0.15.0",
  "transformers>=4.35.0",
  "Pillow>=10.0.0",
  "pillow-heif>=0.15.0",
  "numpy>=1.24.0",
  "datasets>=2.14.0",
  "tqdm>=4.66.0",
  "accelerate>=0.24.0"
]

[project.scripts]
doplgrep = "doplgrep.__main__:main"